# SUMOTEX_WASM_GENERATOR

./: README.md  abi.json
erc20_macro/src/: erc_generator.rs  lib.rs
erc20_wasm/: Cargo.toml
erc20_wasm/src/: erc20.rs  erc721.rs  lib.rs  main.rs  test.rs
