[package]
name = "erc20_wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "sample721"
path = "src/test.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
erc20_macro = { path = "../erc20_macro" }
syn = { version = "1", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
bincode = "1.3"
wasm-bindgen = "0.2"
tiny_http = "0.8"
base64 = "0.13"
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2"